// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`offsetRotate renders 0 1`] = `
Array [
  .c0 {
  offset-rotate: 0;
}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: 0;
}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: 0;
}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetRotate renders function 1`] = `
Array [
  .c0 {
  offset-rotate: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: has;
}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: has;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetRotate renders invalid theme path 1`] = `
Array [
  .c0 {
  offset-rotate: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetRotate renders negative number 1`] = `
Array [
  .c0 {
  offset-rotate: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetRotate renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  offset-rotate: July;
}

@media screen and (min-width:November) {
  .c0 {
    offset-rotate: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-rotate: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-rotate: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-rotate: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: July;
}

@media screen and (min-width:November) {
  .c0 {
    offset-rotate: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-rotate: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-rotate: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-rotate: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    offset-rotate: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-rotate: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-rotate: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-rotate: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    offset-rotate: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-rotate: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-rotate: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-rotate: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`offsetRotate renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    offset-rotate: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-rotate: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-rotate: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-rotate: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    offset-rotate: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-rotate: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-rotate: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-rotate: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    offset-rotate: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-rotate: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-rotate: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-rotate: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    offset-rotate: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-rotate: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-rotate: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-rotate: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`offsetRotate renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  offset-rotate: July;
}

@media May {
  .c0 {
    offset-rotate: August;
  }
}

@media April {
  .c0 {
    offset-rotate: September;
  }
}

@media January {
  .c0 {
    offset-rotate: November;
  }
}

@media April {
  .c0 {
    offset-rotate: August;
  }
}

@media June {
  .c0 {
    offset-rotate: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: July;
}

@media May {
  .c0 {
    offset-rotate: August;
  }
}

@media April {
  .c0 {
    offset-rotate: September;
  }
}

@media January {
  .c0 {
    offset-rotate: November;
  }
}

@media April {
  .c0 {
    offset-rotate: August;
  }
}

@media June {
  .c0 {
    offset-rotate: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    offset-rotate: November;
  }
}

@media April {
  .c0 {
    offset-rotate: January;
  }
}

@media January {
  .c0 {
    offset-rotate: December;
  }
}

@media April {
  .c0 {
    offset-rotate: April;
  }
}

@media June {
  .c0 {
    offset-rotate: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    offset-rotate: November;
  }
}

@media April {
  .c0 {
    offset-rotate: January;
  }
}

@media January {
  .c0 {
    offset-rotate: December;
  }
}

@media April {
  .c0 {
    offset-rotate: April;
  }
}

@media June {
  .c0 {
    offset-rotate: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`offsetRotate renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    offset-rotate: July;
  }
}

@media April {
  .c0 {
    offset-rotate: August;
  }
}

@media January {
  .c0 {
    offset-rotate: September;
  }
}

@media April {
  .c0 {
    offset-rotate: November;
  }
}

@media June {
  .c0 {
    offset-rotate: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    offset-rotate: July;
  }
}

@media April {
  .c0 {
    offset-rotate: August;
  }
}

@media January {
  .c0 {
    offset-rotate: September;
  }
}

@media April {
  .c0 {
    offset-rotate: November;
  }
}

@media June {
  .c0 {
    offset-rotate: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    offset-rotate: January;
  }
}

@media April {
  .c0 {
    offset-rotate: December;
  }
}

@media January {
  .c0 {
    offset-rotate: April;
  }
}

@media April {
  .c0 {
    offset-rotate: May;
  }
}

@media June {
  .c0 {
    offset-rotate: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    offset-rotate: January;
  }
}

@media April {
  .c0 {
    offset-rotate: December;
  }
}

@media January {
  .c0 {
    offset-rotate: April;
  }
}

@media April {
  .c0 {
    offset-rotate: May;
  }
}

@media June {
  .c0 {
    offset-rotate: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`offsetRotate renders postitive number 1`] = `
Array [
  .c0 {
  offset-rotate: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetRotate renders string 1`] = `
Array [
  .c0 {
  offset-rotate: July;
}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: July;
}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: June;
}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: June;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetRotate renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`offsetRotate renders valid theme path 1`] = `
Array [
  .c0 {
  offset-rotate: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  offset-rotate: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
